fix: preserve archive metadata during operations

Currently metadata on an archive is lost when it is modified by Ark.
This change ensures that metadata is preserved during operations.

BUG: 435001